infra/main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_security_group" "web_sg" {
  name = "foremo-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 4005
    to_port     = 4005
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "foremo" {
  ami           = "ami-0f58b397bc5c1f2e8"
  instance_type = "t3.micro"

  security_groups = [aws_security_group.web_sg.name]

  user_data = file("user_data.sh")

  tags = {
    Name = "foremo-server"
  }
}
